# winbrew

./: CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  Taskfile.yml  build.rs  config.yaml  go.sum  lefthook.yml  rust-toolchain.toml  typos.toml
crates/app/: Cargo.toml  build.rs  cargo.toml
crates/app/benches/: doctor_health_report.rs
crates/app/src/: config.rs  lib.rs  main.rs  search.rs  update.rs
crates/app/src/catalog/: error.rs  mod.rs  search.rs  select.rs  update.rs
crates/app/src/commands/: info.rs  search.rs
crates/app/src/database/: errors.rs
crates/app/src/database/config/: errors.rs  registry.rs
crates/app/src/install/: download.rs  mod.rs  state.rs  types.rs
crates/app/src/operations/: config.rs  context.rs  info.rs  list.rs  mod.rs  repair.rs  report.rs  search.rs  shims.rs  update.rs  version.rs
crates/app/src/operations/doctor/: mod.rs  report.rs  scan.rs
crates/app/src/operations/install/: download.rs  flow.rs  mod.rs  plan.rs  sevenz.rs  state.rs  types.rs
crates/app/src/operations/remove/: execution.rs  mod.rs  plan.rs
crates/app/src/operations/repair/: cleanup.rs  mod.rs  plan.rs  replay.rs  resolution.rs  restore.rs  tests.rs
crates/app/src/operations/update/: api.rs  download.rs  metadata.rs  mod.rs  patch.rs  (+2 more)
crates/app/src/remove/: execution.rs  mod.rs  plan.rs
crates/app/tests/: install_flow_tests.rs  install_state_tests.rs  remove_tests.rs  repair_tests.rs  update_refresh_tests.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs  update.rs
crates/catalog/src/catalog/: search.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: cli.rs  lib.rs
crates/cli/src/commands/: config.rs  doctor.rs  error.rs  info.rs  install.rs  list.rs  mod.rs  remove.rs  repair.rs  search.rs  update.rs  version.rs
crates/cli/src/services/: completions.rs  mod.rs  startup.rs
crates/cli/tests/: binary_install_remove_tests.rs  cli.rs  cli_parser_tests.rs  config_command_tests.rs  doctor_command_tests.rs  install_command_tests.rs  package_delete_tests.rs  package_fixup_tests.rs  package_roundtrip_tests.rs  read_only_command_tests.rs  remove_command_tests.rs  repair_command_tests.rs
crates/cli/tests/commands/: config.rs  doctor.rs  install.rs  remove.rs  repair.rs
crates/cli/tests/common/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: cancel.rs  env.rs  fs.rs  hash.rs  lib.rs  paths.rs  temp_workspace.rs  time.rs
crates/core/src/fs/: archive.rs  cleanup.rs  error.rs  mod.rs  move_or_copy.rs  sevenz.rs  write.rs
crates/core/src/network/: download.rs  error.rs  mod.rs
crates/database/: Cargo.toml
crates/database/src/: bootstrap.rs  catalog.rs  command_registry.rs  connection.rs  error.rs  errors.rs  installed_packages.rs  lib.rs  migration.rs  msi_inventory.rs  package_bin_metadata.rs
crates/database/src/catalog/: installers.rs  mod.rs  row.rs  search.rs
crates/database/src/config/: error.rs  keys.rs  lookup.rs  mod.rs  registry.rs  storage.rs  types.rs  validation.rs
crates/database/src/journal/: key.rs  mod.rs  reader.rs  replay.rs  writer.rs
crates/database/tests/: command_registry_tests.rs  fts5_regression_tests.rs  package_tests.rs  schema_contract_tests.rs
crates/engines/: Cargo.toml
crates/engines/src/: fs.rs  lib.rs  network.rs  payload.rs  registry.rs
crates/engines/src/archive/: install.rs  mod.rs  remove.rs
crates/engines/src/fs/: mod.rs
crates/engines/src/msix/: install.rs  mod.rs  remove.rs
crates/engines/src/portable/: install.rs  mod.rs  remove.rs
crates/engines/src/windows/: font.rs  mod.rs  msi.rs
crates/engines/src/zip/: install.rs  remove.rs
crates/engines/tests/: archive_engine.rs  engine_resolution.rs  engine_routing.rs  msix_api_smoke.rs  portable_engine.rs
crates/engines/tests/common/: mod.rs
crates/install/: Cargo.toml
crates/install/src/: download.rs  flow.rs  lib.rs  state.rs  types.rs
crates/models/: Cargo.toml
crates/models/src/: catalog.rs  catalog_metadata.rs  command_resolution.rs  config.rs  conversion.rs  dependency.rs  diagnostics.rs  engine.rs  error.rs  hash.rs  identifiers.rs  info.rs  install.rs  installed.rs  installer.rs  lib.rs  msi_inventory.rs  package.rs  package_ref.rs  query.rs  raw.rs  remove.rs  report.rs  validation.rs  version.rs
crates/models/src/catalog/: conversion.rs  installer_type.rs  metadata.rs  mod.rs  package.rs  raw.rs
crates/models/src/install/: engine.rs  installed.rs  installer.rs  mod.rs  model.rs  removal.rs
crates/models/src/msi_inventory/: mod.rs  records.rs
crates/models/src/package/: dependency.rs  mod.rs  model.rs  query.rs  reference.rs
crates/models/src/reporting/: diagnostics.rs  info.rs  mod.rs  report.rs
crates/models/src/shared/: config.rs  deployment.rs  error.rs  hash.rs  identifiers.rs  mod.rs  validation.rs  version.rs
crates/report/: Cargo.toml
crates/report/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: cancel.rs  lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/src/database/: catalog.rs  installed_packages.rs  journal.rs  migration.rs  mod.rs  msi_inventory.rs
crates/testing/: Cargo.toml
crates/testing/src/: catalog.rs  db.rs  env.rs  font.rs  lib.rs  mock.rs  output.rs  package.rs  zip.rs
crates/ui/: Cargo.toml
crates/ui/src/: builder.rs  interact.rs  lib.rs  log.rs  progress.rs  table.rs  theme.rs
crates/windows/: Cargo.toml  README.md
crates/windows/src/: filesystem.rs  font.rs  lib.rs  registry.rs  system.rs
crates/windows/src/deployment/: mod.rs
crates/windows/src/font/: mod.rs  user_fonts.rs
crates/windows/src/fs/: mod.rs
crates/windows/src/registry/: mod.rs  product_options.rs  test_support.rs  uninstall.rs  windows_version.rs
crates/windows/src/system/: mod.rs
infra/parser/: Cargo.toml  README.md
infra/parser/schema/: catalog.sql
infra/parser/src/: error.rs  lib.rs  main.rs  metadata.rs  parser.rs  pipeline.rs  raw.rs  sqlite.rs  winget.rs
infra/parser/tests/: run_smoke.rs
infra/parser/tests/fixtures/: README.md  scoop_packages.jsonl  winget_packages.jsonl
(+401 files in other folders)
