[workspace]
members = [".", "crates/core", "crates/engines", "crates/models", "crates/runtime", "crates/ui", "infra/parser"]
resolver = "2"

[package]
name = "winbrew"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "winbrew"
path = "src/main.rs"

[dependencies]
winbrew-core = { path = "crates/core" }
winbrew-engines = { path = "crates/engines" }
winbrew-models = { path = "crates/models" }
winbrew-runtime = { path = "crates/runtime" }
winbrew-ui = { path = "crates/ui" }

clap = { version = "4", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
indicatif = { version = "0.18", default-features = false, features = ["unicode-width"] }

rusqlite = { version = "0.39", default-features = false, features = ["bundled", "unlock_notify"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
r2d2 = "0.8"

thiserror = "2.0"
anyhow = "1"
rayon = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "registry", "std"] }
tempfile = "3"

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1"

[build-dependencies]
chrono = { version = "0.4", features = ["clock"] }
winresource = "0.1"

[dev-dependencies]
mockito = "1.7.2"
zip = "8"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
