[workspace]
members = [".", "crates/catalog", "crates/core", "crates/engines", "crates/install", "crates/models", "crates/report", "crates/runtime", "crates/storage", "crates/ui", "infra/parser"]
resolver = "2"

[package]
name = "winbrew"
version = "0.1.0"
edition = "2024"
rust-version = "1.85" # MSRV:3
license = "MIT OR Apache-2.0"

[lib]
path = "crates/app/src/lib.rs"

[[bin]]
name = "winbrew"
path = "crates/app/src/main.rs"

[dependencies]
winbrew-catalog = { path = "crates/catalog" }
winbrew-install = { path = "crates/install" }
winbrew-report = { path = "crates/report" }
winbrew-storage = { path = "crates/storage" }
winbrew-core = { path = "crates/core" }
winbrew-engines = { path = "crates/engines" }
winbrew-models = { path = "crates/models" }
winbrew-runtime = { path = "crates/runtime" }
winbrew-ui = { path = "crates/ui" }

clap = { version = "4", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
indicatif = { version = "0.18", default-features = false, features = ["unicode-width"] }

rusqlite = { version = "0.39", default-features = false, features = ["bundled", "unlock_notify"] }
chrono = { version = "0.4", features = ["serde"] }

thiserror = "2.0"
anyhow = "1"
rayon = "1.11"
tracing = "0.1"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1"

[build-dependencies]
chrono = { version = "0.4", features = ["clock"] }
winresource = "0.1"

[dev-dependencies]
mockito = "1.7.2"
zip = "8"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
