[workspace]
resolver = "2"
members = ["crates/*", "infra/*"]
exclude = ["infra/crawler", "infra/publisher"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85" # MSRV:3
license = "MIT OR Apache-2.0"
authors = ["recregt"]
repository = "https://github.com/recregt/winbrew"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
