[package]
name = "winbrew-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
winbrew-core = { path = "../core" }
winbrew-models = { path = "../models" }
winbrew-database = { path = "../database" }
winbrew-engines = { path = "../engines" }
serde_json = "1"
thiserror = "2.0"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"