[package]
name = "winbrew-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
rusqlite = { version = "0.39", default-features = false, features = ["bundled", "modern_sqlite", "unlock_notify"] }
serde.workspace = true
url = "2"
winbrew-core = { path = "../core" }
winbrew-models = { path = "../models" }
winbrew-database = { path = "../database" }
winbrew-engines = { path = "../engines" }
serde_json = "1"
thiserror = "2.0"
tracing.workspace = true
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
winbrew-testing = { path = "../testing" }