[package]
name = "winbrew-catalog"
version = "0.1.0"
edition = "2024"
rust-version = "1.85" # MSRV:3
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
rusqlite = { version = "0.39", default-features = false, features = ["bundled", "unlock_notify"] }
thiserror = "2.0"
winbrew-core = { path = "../core" }
winbrew-models = { path = "../models" }
winbrew-storage = { path = "../storage" }

[dev-dependencies]
tempfile = "3"