[package]
name = "winbrew-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
rusqlite = { version = "0.39", default-features = false, features = ["bundled", "modern_sqlite", "unlock_notify"] }
thiserror = "2.0"
winbrew-core = { path = "../core" }
winbrew-models = { path = "../models" }
winbrew-storage = { path = "../storage" }

[dev-dependencies]
tempfile = "3"