[package]
name = "winbrew-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
winbrew-app = { path = "../app" }
winbrew-ui = { path = "../ui" }
serde_json = "1"
tracing.workspace = true

clap = { version = "4", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
indicatif = { version = "0.18", default-features = false, features = ["unicode-width"] }
thiserror = "2.0"
rayon = "1.11"
tempfile = "3"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "registry", "std"] }
