[package]
name = "winbrew-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
winbrew-app = { path = "../app" }
winbrew-ui = { path = "../ui" }
serde_json = "1"
tracing.workspace = true

clap = { version = "4", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
indicatif = { version = "0.18", default-features = false, features = ["unicode-width"] }
thiserror = "2.0"
tempfile = "3"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "registry", "std"] }

[dev-dependencies]
mockito = "1"
rusqlite = { version = "0.39", default-features = false, features = ["bundled", "modern_sqlite", "unlock_notify"] }
winbrew-core = { path = "../core" }
zip = "8"

[[test]]
name = "cli_tests"
path = "tests/cli.rs"

[[test]]
name = "config_tests"
path = "tests/commands/config.rs"

[[test]]
name = "doctor_tests"
path = "tests/commands/doctor.rs"

[[test]]
name = "install_tests"
path = "tests/commands/install.rs"

[[test]]
name = "remove_tests"
path = "tests/commands/remove.rs"

[[test]]
name = "repair_tests"
path = "tests/commands/repair.rs"
