[package]
name = "winbrew-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85" # MSRV:3
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
libc = "0.2"
md-5 = "0.11"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
sha1 = "0.11"
sha2 = "0.11"
thiserror = "2.0"
tracing = "0.1"
url = "2"
zip = "8"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation"] }
winbrew-windows = { path = "../windows" }
