[package]
name = "winbrew-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
winbrew-models = { path = "../models" }
chrono = { version = "0.4", features = ["clock", "serde"] }
ctrlc = "3"
libc = "0.2"
md-5 = "0.11"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls-tls"] }
sha1 = "0.11"
sha2 = "0.11"
thiserror = "2.0"
tracing = "0.1"
url = "2"
zip = "8"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"] }
winbrew-windows = { path = "../windows" }
