[package]
name = "winbrew-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
winbrew-models = { path = "../models" }
chrono = { version = "0.4", features = ["clock", "serde"] }
ctrlc = "3"
md-5 = "0.11"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
sha1 = "0.11"
sha2 = "0.11"
thiserror = "2.0"
tracing = "0.1"
url = "2"
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
bzip2 = "0.6"
zip = "8"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
winbrew-windows = { path = "../windows" }
