[package]
name = "winbrew-database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
r2d2 = "0.8"
rusqlite = { version = "0.39", default-features = false, features = ["bundled", "modern_sqlite", "unlock_notify"] }
serde.workspace = true
serde_json = "1"
thiserror = "2.0"
toml = "1"
tracing.workspace = true
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "registry", "std"] }
winbrew-core = { path = "../core" }
winbrew-models = { path = "../models" }

[dev-dependencies]
tempfile = "3"