[package]
name = "winbrew-engines"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
regex = "1.12"
strum_macros = "0.28"
url = "2"
zip = "8"
winbrew-models = { path = "../models" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["ApplicationModel", "Foundation", "Management_Deployment"] }
winbrew-windows = { path = "../windows" }

[dev-dependencies]
tempfile = "3"