[package]
name = "winbrew-engines"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
regex = "1.12"
strum_macros = "0.28"
url = "2"
zip = "8"
tracing.workspace = true
winbrew-core = { path = "../core" }
winbrew-models = { path = "../models" }

[target.'cfg(windows)'.dependencies]
winbrew-windows = { path = "../windows" }

[dev-dependencies]
tempfile = "3"
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
winbrew-models = { path = "../models", features = ["test-support"] }