[package]
name = "winbrew-install"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4", features = ["clock", "serde"] }
rusqlite = { version = "0.39", default-features = false, features = ["bundled", "modern_sqlite", "unlock_notify"] }
thiserror = "2.0"
tracing.workspace = true
winbrew-catalog = { path = "../catalog" }
winbrew-core = { path = "../core" }
winbrew-engines = { path = "../engines" }
winbrew-models = { path = "../models" }
winbrew-storage = { path = "../storage" }
winbrew-cancel = { path = "../cancel" }
