[package]
name = "winbrew-models"
version = "0.1.0"
edition = "2024"
rust-version = "1.85" # MSRV:3
license = "MIT OR Apache-2.0"

[dependencies]
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
url = "2"
winbrew-core = { path = "../core" }

[dev-dependencies]
serde_json = "1"