[package]
name = "winbrew-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
semver = { version = "1", features = ["serde"] }
serde.workspace = true
thiserror = "2.0"
url = "2"
winbrew-core = { path = "../core" }

[dev-dependencies]
serde_json = "1"