[package]
name = "winbrew-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
semver = { version = "1", features = ["serde"] }
serde.workspace = true
serde_json = "1"
sha2 = "0.11"
thiserror = "2.0"
url = "2"
