[package]
name = "winbrew-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
winbrew-core = { path = "../core" }
winbrew-models = { path = "../models" }