[package]
name = "winbrew-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
mockito = "1"
rusqlite = { version = "0.39", default-features = false, features = ["bundled", "modern_sqlite", "unlock_notify"] }
tempfile = "3"
zip = "8"
winbrew-core = { path = "../core" }
winbrew-database = { path = "../database" }
winbrew-models = { path = "../models" }
