[package]
name = "winbrew-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
comfy-table = "7.2"
console = { version = "0.16", default-features = false, features = ["std"] }
dialoguer = { version = "0.12", default-features = false }
indicatif = { version = "0.18", default-features = false, features = ["unicode-width"] }
terminal_size = "0.4"
tracing.workspace = true
unicode-width = "0.2"
winbrew-models = { path = "../models" }

[dev-dependencies]
winbrew-testing = { path = "../testing" }
