[package]
name = "winbrew-windows"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
regex = "1.12"
strum = "0.28"
strum_macros = "0.28"
winreg = "0.56"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"] }
