[package]
name = "winbrew-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
regex = "1.12"
strum = "0.28"
strum_macros = "0.28"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"] }
