[package]
name = "winbrew-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
regex = "1.12"
strum = "0.28"
strum_macros = "0.28"
winbrew-models = { path = "../models" }

[features]
testing = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["ApplicationModel", "Foundation", "Management_Deployment", "Win32_System_ApplicationInstallationAndServicing"] }
winreg = "0.56"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_SystemInformation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
