[package]
name = "winbrew-infra-parser"
version = "0.1.0"
edition = "2024"
rust-version = "1.85" # MSRV:3
license = "MIT OR Apache-2.0"

[dependencies]
winbrew-models = { path = "../../crates/models" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
rusqlite = { version = "0.39", features = ["bundled"] }
sha2 = "0.11"
