[package]
name = "winbrew-infra-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
winbrew-models = { path = "../../crates/models" }
serde.workspace = true
serde_json = "1"
thiserror = "2.0"
rusqlite = { version = "0.39", default-features = false, features = ["bundled", "modern_sqlite", "unlock_notify"] }
sha2 = "0.11"

[dev-dependencies]
winbrew-models = { path = "../../crates/models", features = ["test-support"] }
